Now make html should automatically post-process the html files.
In the post-process html anchors will be created for all
exercises, so that the exercise table at the top of the page
can link to them.

--- a/pandas1.ipynb
+++ b/pandas1.ipynb
@@ -4,6 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<!--NAVIGATION-->\n",
+    "\n",
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/jttoivon/x/blob/master/pandas1.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n",
+    "\n",
+    "|   |   |   |\n",
+    "|---|---|---|\n",
+    "| [Exercise 13 (read series)](<#Exercise-13-(read-series&#41;>) | [Exercise 14 (operations on series)](<#Exercise-14-(operations-on-series&#41;>) | [Exercise 15 (inverse series)](<#Exercise-15-(inverse-series&#41;>) |\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Pandas\n",
     "\n",
     "In the NumPy section we dealt with some arrays, whose columns had each a special meaning. For example, the column number 0 could contain values interpreted as years, and column 1 could contain a month, and so on. It is possible to handle the data this way, but in can be hard to remember, which column number corresponds to which variable. Especially, if you later remove some column from the array, then the numbering of the remaining columns changes. One solution to this is to give a descriptive name to each column. These column names stay fixed and attached to their corresponding columns, even if we remove some of the columns. In addition, the rows can be given names as well, these are called *indices* in Pandas.\n",
@@ -445,6 +460,16 @@
     "\n",
     "    * Operation maintain these indices even when adding or removing rows or columns\n",
     "    * Indices also allow several operations to be combined meaningfully and easily"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!--NAVIGATION-->\n",
+    "\n",
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/jttoivon/x/blob/master/pandas1.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n"
    ]
   }
  ],
