--- a/pandas3.ipynb
+++ b/pandas3.ipynb
@@ -4,6 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<!--NAVIGATION-->\n",
+    "\n",
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/jttoivon/x/blob/master/pandas3.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n",
+    "\n",
+    "|   |   |   |\n",
+    "|---|---|---|\n",
+    "| [Exercise 1 (split date continues)](<#Exercise-1-(split-date-continues&#41;>) | [Exercise 2 (cycling weather)](<#Exercise-2-(cycling-weather&#41;>) | [Exercise 3 (top bands)](<#Exercise-3-(top-bands&#41;>) |\n",
+    "| [Exercise 4 (cyclists per day)](<#Exercise-4-(cyclists-per-day&#41;>) | [Exercise 5 (best record company)](<#Exercise-5-(best-record-company&#41;>) | [Exercise 6 (suicide fractions)](<#Exercise-6-(suicide-fractions&#41;>) |\n",
+    "| [Exercise 7 (suicide weather)](<#Exercise-7-(suicide-weather&#41;>) | [Exercise 8 (bicycle timeseries)](<#Exercise-8-(bicycle-timeseries&#41;>) | [Exercise 9 (commute)](<#Exercise-9-(commute&#41;>) |\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Pandas (continues)"
    ]
   },
@@ -1006,6 +1023,16 @@
     "\n",
     "Pandas handles only one dimensional data (Series) and two dimensional data (DataFrame). While you can use [hierarchical indices](http://pandas.pydata.org/pandas-docs/stable/user_guide/advanced.html#hierarchical-indexing-multiindex) to simulate higher dimensional arrays, you should use the [xarray](http://xarray.pydata.org/en/stable/index.html) library, if you need proper higher-dimensional arrays with labels. It is basically a cross between NumPy and Pandas.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!--NAVIGATION-->\n",
+    "\n",
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/jttoivon/x/blob/master/pandas3.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n"
    ]
   }
  ],
