--- a/matplotlib.ipynb
+++ b/matplotlib.ipynb
@@ -7,7 +7,11 @@
     "<!--NAVIGATION-->\n",
     "\n",
     "\n",
-    "<a href=\"https://colab.research.google.com/github/jttoivon/x/blob/master/matplotlib.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n"
+    "<a href=\"https://colab.research.google.com/github/jttoivon/x/blob/master/matplotlib.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n",
+    "\n",
+    "|   |   |   |\n",
+    "|---|---|---|\n",
+    "| [Exercise 9 (multiple graphs)](<#Exercise-9-(multiple-graphs&#41;>) | [Exercise 10 (subfigures)](<#Exercise-10-(subfigures&#41;>) |\n"
    ]
   },
   {
