--- a/numpy2.ipynb
+++ b/numpy2.ipynb
@@ -4,6 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<!--NAVIGATION-->\n",
+    "\n",
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/jttoivon/x/blob/master/numpy2.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n",
+    "\n",
+    "|   |   |   |\n",
+    "|---|---|---|\n",
+    "| [Exercise 1 (column comparison)](<#Exercise-1-(column-comparison&#41;>) | [Exercise 2 (first half second half)](<#Exercise-2-(first-half-second-half&#41;>) | [Exercise 3 (most frequent first)](<#Exercise-3-(most-frequent-first&#41;>) |\n",
+    "| [Exercise 4 (matrix power)](<#Exercise-4-(matrix-power&#41;>) | [Exercise 5 (correlation)](<#Exercise-5-(correlation&#41;>) | [Exercise 6 (meeting lines)](<#Exercise-6-(meeting-lines&#41;>) |\n",
+    "| [Exercise 7 (meeting planes)](<#Exercise-7-(meeting-planes&#41;>) | [Exercise 8 (almost meeting lines)](<#Exercise-8-(almost-meeting-lines&#41;>) |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# NumPy (continues)"
    ]
   },
@@ -700,6 +716,16 @@
     "\n",
     "<hr/>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!--NAVIGATION-->\n",
+    "\n",
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/jttoivon/x/blob/master/numpy2.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n"
+   ]
   }
  ],
  "metadata": {
@@ -718,7 +744,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
