--- a/image_processing.ipynb
+++ b/image_processing.ipynb
@@ -9,9 +9,10 @@
     "\n",
     "<a href=\"https://colab.research.google.com/github/jttoivon/x/blob/master/image_processing.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n",
     "\n",
-    "|   |   |   |\n",
-    "|---|---|---|\n",
-    "| [Exercise 11 (to grayscale)](<#Exercise-11-(to-grayscale&#41;>) | [Exercise 12 (radial fade)](<#Exercise-12-(radial-fade&#41;>) |\n"
+    "|         |        |       |\n",
+    "|---------|--------|-------|\n",
+    "| [Exercise 11 (to grayscale)](<#Exercise-11-(to-grayscale&#41;>) |  [Exercise 12 (radial fade)](<#Exercise-12-(radial-fade&#41;>)  |             |\n",
+    "\n"
    ]
   },
   {
