Fine tuned exercise lists

--- a/extra.ipynb
+++ b/extra.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<!--NAVIGATION-->\n",
+    "\n",
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/jttoivon/x/blob/master/extra.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Extra stuff"
    ]
   },
@@ -105,6 +116,16 @@
     "lim = plt.axis()\n",
     "plt.scatter(Xnew[:, 0], Xnew[:, 1], c=ynew, s=20, cmap='RdBu', alpha=0.1)\n",
     "plt.axis(lim)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!--NAVIGATION-->\n",
+    "\n",
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/jttoivon/x/blob/master/extra.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n"
    ]
   }
  ],
