--- a/notes.ipynb
+++ b/notes.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<!--NAVIGATION-->\n",
+    "\n",
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/jttoivon/x/blob/master/notes.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Tehtäviä\n",
     "- Mitkä metodit ovat yhteisiä dataframelle ja seriesille, ja mitkä ovat erillisiä.\n",
     "- Iän ja pituuden regressointi\n",
@@ -45,6 +56,16 @@
     "## Mietteitä\n",
     "\n",
     "* Pitääkö ohjelmien tarkistaa syötteiden järkevyys va voiko olettaa että syötteen ovat järkeviä. Jälkimmäinen vaihtoehto on Pythonmaisempi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!--NAVIGATION-->\n",
+    "\n",
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/jttoivon/x/blob/master/notes.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n"
    ]
   }
  ],
