Fixed errors. Added stuff on generators

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -117,6 +117,104 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myrange(start, stop, step):\n",
+    "    i=start\n",
+    "    while i != stop:\n",
+    "        yield i\n",
+    "        i += step\n",
+    "g=myrange(0,3,1)\n",
+    "print(type(g))\n",
+    "dir(g)\n",
+    "it = iter(g)\n",
+    "print(type(it), dir(it))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class WeekdayIterator(object):\n",
+    "    \"\"\"Iterator over the weekdays.\"\"\"\n",
+    "    def __init__(self):\n",
+    "        self.i=0    # Start from Monday\n",
+    "        self.weekdays = (\"Monday\",\"Tuesday\",\"Wednesday\",\"Thursday\",\"Friday\",\"Saturday\",\"Sunday\")\n",
+    "    def __iter__(self):    # If this object were a container, then this method would return the iterator over the \n",
+    "                           # elements of the container.\n",
+    "        return self        # However, this object is already an iterator, hence we return self.\n",
+    "    def __next__(self):    # Returns the next weekday\n",
+    "        tmp = self.i\n",
+    "        self.i += 1\n",
+    "        if tmp == 7:    # Signal that all weekdays were already iterated over\n",
+    "            raise StopIteration\n",
+    "        else:\n",
+    "            return self.weekdays[tmp]\n",
+    "        \n",
+    "for w in WeekdayIterator():\n",
+    "    print(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mydate(day=1, month=1):   # Generates dates starting from the given date\n",
+    "    lengths=(31,28,31,30,31,30,31,31,30,31,30,31)   # How many days in a month\n",
+    "    first_day=day\n",
+    "    for m in range(month, 13):\n",
+    "        for d in range(first_day, lengths[m-1] + 1):\n",
+    "            yield (d, m)\n",
+    "        first_day=1\n",
+    "gen = mydate(26, 2)   # Start from 26th of February\n",
+    "for i, (day, month) in enumerate(gen):   \n",
+    "    if i == 5: break                 # Print only the first five dates from the generator\n",
+    "    print(\"Index %i, day %i, month %i\" % (i, day, month))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def date2(month):   # Generates the dates in a month of a non-leap year\n",
+    "    days=(31,28,31,30,31,30,31,31,30,31,30,31)\n",
+    "    n = days[month-1]\n",
+    "    i=1\n",
+    "    while i <= n:\n",
+    "        yield i   # Temporarily return from the generator 'days'\n",
+    "        i += 1\n",
+    "list(date2(2))     # Dates of February\n",
+    "            \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import collections.abc as abc\n",
+    "print(isinstance([1,2,3], abc.Sequence))\n",
+    "print(isinstance((1,2,3), abc.Sequence))\n",
+    "print(isinstance(\"abcd\", abc.Sequence))\n",
+    "print(isinstance(range(3), abc.Sequence))\n",
+    "print(isinstance(set([1,2]), abc.Sequence))\n",
+    "print(isinstance(g, abc.Iterable))\n",
+    "print(isinstance(g, abc.Sequence))\n",
+    "print(isinstance(dict(), abc.Iterable))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -143,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
