--- a/instructions.ipynb
+++ b/instructions.ipynb
@@ -28,9 +28,9 @@
     "* This is the recommended alternative\n",
     "* Will take about 3.3 gigabytes of disk space\n",
     "* Download the anaconda installer (64bits, Python 3) from https://www.anaconda.com/download\n",
-    "* On command line run `bash nameofthedownloadedfile`\n",
+    "* On command line run `bash nameofthedownloadedfile` on Linux (and maybe on macOS)\n",
     "* Follow the instructions of the installer\n",
-    "* 3 minutes\n",
+    "* Takes about 3 minutes\n",
     "\n",
     "### (alternative b) Install miniconda and Python packages\n",
     "* This alternative is not recommended\n",
@@ -50,7 +50,7 @@
     "         `conda install --yes --file requirements.txt`\n",
     "  This may take awhile.\n",
     "  \n",
-    "* 1 min 30 s on fast network"
+    "* Takes about 1 min 30 s on fast network"
    ]
   },
   {
@@ -61,9 +61,9 @@
     "\n",
     "* Go to the [exercise page](https://tmc.mooc.fi/org/hy/courses/438) of the course\n",
     "* If you don't already have an account on this server, press the signup button\n",
-    "* Use your student number as the organizational id\n",
+    "* Use your student number as the organizational id if you want to get credits from this course\n",
     "* Choose organization Helsingin yliopisto\n",
-    "* Choose course Data Analysis with Python beta"
+    "* Choose course Data Analysis with Python Spring 2019"
    ]
   },
   {
@@ -74,9 +74,10 @@
     "\n",
     "* Follow the instructions on the following page to install TMC client \n",
     "    https://github.com/testmycode/tmc-cli\n",
+    "* Note that on this course we use the command line version of TMC, not netbeans or any other IDE. So, you need to know the basics of command line use in the terminal/command prompt\n",
     "* Go to a folder where you want to download the exercises, and issue command `tmc login`\n",
     "* Provide login details, and use organization slug `hy`\n",
-    "* Then issue command `tmc download hy-data-analysis-with-python-beta` to download the exercises\n",
+    "* Then issue command `tmc download hy-data-analysis-with-python-spring-2019` to download the exercises\n",
     "* Important commands:\n",
     "  * `tmc` to show help message\n",
     "  * `tmc test` to test your solution locally\n",
