--- a/instructions.ipynb
+++ b/instructions.ipynb
@@ -76,6 +76,7 @@
     "    https://github.com/testmycode/tmc-cli\n",
     "* Note that on this course we use the command line version of TMC, not netbeans or any other IDE. So, you need to know the basics of command line use in the terminal/command prompt\n",
     "* Go to a folder where you want to download the exercises, and issue command `tmc login`\n",
+    "* If it asks for a server address, then your TMC client is outdated. Re-install the client. Note, that the installation script was updated very recently (12.3.2019). So, if you had problems with it, you might want to try again.\n",
     "* Provide login details, and use organization slug `hy`\n",
     "* Then issue command `tmc download hy-data-analysis-with-python-spring-2019` to download the exercises\n",
     "* Important commands:\n",
