Fixed some typos

--- a/basics.ipynb
+++ b/basics.ipynb
@@ -720,7 +720,7 @@
    "metadata": {},
    "source": [
     "### Statements\n",
-    "Statements are command that have some effect. For example, a function call (that is not part of another expression) is a statement. Also, the variable assignment is a statement:"
+    "Statements are commands that have some effect. For example, a function call (that is not part of another expression) is a statement. Also, the variable assignment is a statement:"
    ]
   },
   {
@@ -1942,8 +1942,10 @@
     "Suppose we have two lists `L1` and `L2` that contain integers which are sorted in ascending order.\n",
     "Create a function `merge` that gets these lists as parameters and returns a new sorted list `L` that has\n",
     "all the elements of `L1` and `L2`. So, `len(L)` should equal to `len(L1)+len(L2)`. Do this using the\n",
-    "fact that both lists are already sorted. You can’t to use the `sorted` function or the `sort` method in implementing the `merge` method. You can however use these functions in the main function for creating inputs to the `merge` function.\n",
+    "fact that both lists are already sorted. You can’t use the `sorted` function or the `sort` method in implementing the `merge` method. You can however use these functions in the main function for creating inputs to the `merge` function.\n",
     "Test with a couple of examples in the `main` function that your solution works correctly.\n",
+    "\n",
+    "Note: In Python argument lists are passed by reference to the function, they are not copied! Make sure you don't modify the original lists of the caller.\n",
     "<hr/>"
    ]
   },
@@ -2795,7 +2797,7 @@
    "metadata": {},
    "source": [
     "### Processing sequences\n",
-    "In this section we will go through some useful tools, that are maybe familiar to you from some function programming language like *lisp* or *haskell*. These functions rely on functions being first-class objects in Python, that is, you can\n",
+    "In this section we will go through some useful tools, that are maybe familiar to you from some functional programming language like *lisp* or *haskell*. These functions rely on functions being first-class objects in Python, that is, you can\n",
     "\n",
     "* pass a function as a parameter to another function\n",
     "* return a function as a return value from some function\n",
@@ -2935,7 +2937,7 @@
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 16 (transform)</div>\n",
     "\n",
-    "Write a function `transform` that gets two strings as parameters and returns a list of integers. The function should split the strings into words, and convert these words to integer. This should give two lists of integers. Then the function should return a list whose elements are multiplication of two integers in the respective positions in the lists.\n",
+    "Write a function `transform` that gets two strings as parameters and returns a list of integers. The function should split the strings into words, and convert these words to integers. This should give two lists of integers. Then the function should return a list whose elements are multiplication of two integers in the respective positions in the lists.\n",
     "For example\n",
     "`transform(\"1 5 3\", \"2 6 -1\")`\n",
     "should return the list of integers\n",
@@ -3318,6 +3320,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "If no parameters are given to the `split` method, then it splits at any sequence of white space."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### <div class=\"alert alert-info\">Exercise 18 (acronyms)</div>\n",
     "\n",
     "Write function `acronyms` which takes a string as a parameter and returns a list of acronyms. A word is an acronym if it has length at least two, and all its characters are in uppercase. Before acronym detection, delete punctuation with the `strip` method.\n",
@@ -3440,9 +3449,9 @@
     "statement, the lookup proceeds in the following order:\n",
     "\n",
     "* Check if it is a builtin module\n",
-    "* Check if the file `mod.py` is found in any of the directories in\n",
+    "* Check if the file `mod.py` is found in any of the folders in\n",
     "the list `sys.path`. The first item in this list is the current\n",
-    "directory\n",
+    "folder\n",
     "\n",
     "When Python is started, the `sys.path` list is initialised with\n",
     "the contents of the `PYTHONPATH` environment variable"
@@ -3523,7 +3532,7 @@
     "The folder should contain a file named `__init__.py` that\n",
     "makes up the package body. This handles the initialisation of\n",
     "the package.\n",
-    "The directory may contain also further directories\n",
+    "The folder may contain also further folders\n",
     "(subpackages) or Python files (normal modules).\n",
     "\n",
     "```\n",
