--- a/basics.ipynb
+++ b/basics.ipynb
@@ -2574,7 +2574,7 @@
     "{’liikuttaa’: [’move’], ’salata’: [’hide’], ’piilottaa’: [’hide’]}\n",
     "```\n",
     "\n",
-    "Be careful with synonyms!\n",
+    "Be careful with synonyms and homonyms!\n",
     "<hr/>"
    ]
   },
