Elaborated on attributes and ex. 2-12

--- a/basics.ipynb
+++ b/basics.ipynb
@@ -3566,6 +3566,20 @@
     "visible to all modules. All variables belong to some module\n",
     "namespace.\n",
     "\n",
+    "One can query the attributes of an object using the `dir` function. With no\n",
+    "parameters, it shows the attributes of the current module. Try executing `dir()` in\n",
+    "an IPython shell or in a Jupyter notebook! After that, define the following attributes, and try running `dir()`\n",
+    "again:\n",
+    "\n",
+    "```python\n",
+    "a=5\n",
+    "def f(i):\n",
+    "    return i + 1\n",
+    "```\n",
+    "\n",
+    "The above definitions created a *data attribute* called `a` and a *function attribute* called `f`.\n",
+    "We will talk more about attributes next week when we will talk about objects.\n",
+    "\n",
     "Just like other objects, the module object contains its\n",
     "attributes in the dictionary `modulename.__dict__`\n",
     "Usually a module contains at least the attributes `__name__` and\n",
