--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -766,7 +766,31 @@
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 12 (row and column vectors)</div>\n",
     "\n",
-    "Create function `get_row_vectors` that returns a list of rows from the input array of shape `(n,m)`, but this time the rows must have shape `(1,n)`. Similarly, create function `get_columns_vectors` that returns the column of the input matrix having shape `(m,1)`.\n",
+    "Create function `get_row_vectors` that returns a list of rows from the input array of shape `(n,m)`, but this time the rows must have shape `(1,n)`. Similarly, create function `get_columns_vectors` that returns a list of columns (each having shape `(m,1)`) of the input matrix .\n",
+    "\n",
+    "Example: for a 2x3 input matrix\n",
+    "\n",
+    "```\n",
+    " [[5 0 3]\n",
+    "  [3 7 9]]\n",
+    "```\n",
+    "\n",
+    "the result should be\n",
+    "\n",
+    "```\n",
+    "Row vectors: \n",
+    "[array([[5, 0, 3]]), array([[3, 7, 9]])]\n",
+    "Column vectors: \n",
+    "[array([[5],\n",
+    "        [3]]), \n",
+    " array([[0],\n",
+    "        [7]]), \n",
+    " array([[3],\n",
+    "        [9]])]\n",
+    "```\n",
+    "\n",
+    "The above output is basically just the returned lists printed with `print`. Only some\n",
+    "whitespace is adjusted to make it look nicer. Output is not tested.\n",
     "\n",
     "<hr/>"
    ]
