Fixed a few typos

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -238,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With `linspace` one does not have compute the length of the step, but instead one specifies the wanted number of elements. By default, the endpoint is included in the result, unlike with `arange`."
+    "With `linspace` one does not have to compute the length of the step, but instead one specifies the wanted number of elements. By default, the endpoint is included in the result, unlike with `arange`."
    ]
   },
   {
@@ -247,7 +247,7 @@
    "source": [
     "### Arrays with random elements\n",
     "\n",
-    "To test our programs we might use real data as input. However, real data is not always available, and it may take time to gather. We could instead generate random numbers to use as substitute. They can be generated really easily with NumPy, and can be sampled from several different distributions, of which we mention below only a few. Random data can simulate real data better than, for example, ranges or constant arrays. Sometimes we also need random numbers in our programs to choose a subset of real data (sampling). NumPy can easily produces arrays of wanted shape filled with random numbers. Below are few examples."
+    "To test our programs we might use real data as input. However, real data is not always available, and it may take time to gather. We could instead generate random numbers to use as substitute. They can be generated really easily with NumPy, and can be sampled from several different distributions, of which we mention below only a few. Random data can simulate real data better than, for example, ranges or constant arrays. Sometimes we also need random numbers in our programs to choose a subset of real data (sampling). NumPy can easily produce arrays of wanted shape filled with random numbers. Below are few examples."
    ]
   },
   {
@@ -299,14 +299,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you run the above cell multiple times, it will always give the same number, unlike the earlier examples. Try rerunning them now!"
+    "If you run the above cell multiple times, it will always give the same numbers, unlike the earlier examples. Try rerunning them now!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The call to `np.random.seed` initializes the *global* random number generator. The calls `np.random.random`, `np.random.normal`, etc all use this global random number generator. It is however possible to generate new random number generators, and use those to sample random numbers from a distribution. Example on usage:"
+    "The call to `np.random.seed` initializes the *global* random number generator. The calls `np.random.random`, `np.random.normal`, etc all use this global random number generator. It is however possible to create new random number generators, and use those to sample random numbers from a distribution. Example on usage:"
    ]
   },
   {
@@ -983,7 +983,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's measure how much slower Python's `sum` function is compared to NumPy's equivalent when aggrating over an array:"
+    "Let's measure how much slower Python's `sum` function is compared to NumPy's equivalent when aggregating over an array:"
    ]
   },
   {
