Added info about points

--- a/basics2.ipynb
+++ b/basics2.ipynb
@@ -811,14 +811,16 @@
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 5 (summary)</div>\n",
     "\n",
+    "This exercise can give two points at maximum!\n",
+    "\n",
     "Part 1.\n",
     "\n",
     "Create a function called `summary` that gets a filename as a parameter. The input\n",
     "file should contain a floating point number on each line of the file. Make your function read these\n",
     "numbers and then return a triple containing the sum, average, and standard deviation of these numbers for the file.\n",
-    "As a remainder, the formula for corrected sample standard deviation is\n",
+    "As a reminder, the formula for corrected sample standard deviation is\n",
     "$\\sqrt{\\frac{\\sum_{i=1}^n (x_i - \\overline x)^2}{n-1}}$,\n",
-    "where $\\overline x$ is the average.\n",
+    "where $\\overline x$ is the average. Use the `math.sqrt` function from the `math` module in your solution.\n",
     "\n",
     "The `main` function should call the function summary for each filename in the list `sys.argv[1:]` of command line parameters.\n",
     "\n",
@@ -839,7 +841,7 @@
     "If some line doesn’t represent a number, you can just ignore that line. You can achieve this with the *try-except* block. An example of recovering from an exceptional situation:\n",
     "```python\n",
     "try:\n",
-    "    x = float(line)                 # The float constructor raises ValueError exception if conversion is no possible\n",
+    "    x = float(line)           # The float constructor raises ValueError exception if conversion is no possible\n",
     "except ValueError:\n",
     "    # Statements in here are executed when the above conversion fails\n",
     "```\n",
@@ -853,6 +855,8 @@
    "metadata": {},
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 6 (file count)</div>\n",
+    "\n",
+    "This exercise can give two points at maximum!\n",
     "\n",
     "Part 1.\n",
     "\n",
@@ -877,6 +881,8 @@
    "metadata": {},
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 7 (file extensions)</div>\n",
+    "\n",
+    "This exercise can give two points at maximum!\n",
     "\n",
     "Part 1.\n",
     "\n",
