--- a/image_processing.ipynb
+++ b/image_processing.ipynb
@@ -122,6 +122,8 @@
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 11 (to grayscale)</div>\n",
     "\n",
+    "This exercise can give two points at maximum!\n",
+    "\n",
     "Part 1.\n",
     "\n",
     "Write a function `to_grayscale` that takes an RGB image (three dimensional array) and returns a two dimensional gray-scale image. The conversion to gray-scale should take a weighted  average of the red, green, and blue values and use that as the value of gray. The first axis is the x, the second is y, and the third is the color components (red, green, blue).\n",
