--- a/numpy2.ipynb
+++ b/numpy2.ipynb
@@ -615,12 +615,8 @@
     "\n",
     "Repeat the functionality of the NumPy function `numpy.linalg.matrix_power`, which raises a square matrix of shape (m,m) to the `n`th power. Here the multiplication is the matrix multiplication. Square matrix `a` raised to power `n` is therefore `a @ a @ ... @ a` where `a` is repeated `n` times. When n is zero then $a^0$ is equal to `np.eye(m)`.\n",
     "\n",
-    "Part 1.\n",
-    "\n",
     "Write function `matrix_power` that gets as first argument a square matrix `a` and as second argument a non-negative integer `n`. The function should return the matrix `a` multiplied by itself `n-1` times.\n",
     "Use Python's reduce function and a generator expression.\n",
-    "\n",
-    "Part 2.\n",
     "\n",
     "Extend the `matrix_power` function.\n",
     "For negative powers, we define $a^{-1}$ to be equal to the multiplicative inverse of `a`. You can use NumPy's function `numpy.linalg.inv` for this. And you may assume that the input matrix is invertible.\n",
@@ -633,6 +629,8 @@
    "metadata": {},
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 5 (correlation)</div>\n",
+    "\n",
+    "This exercise can give two points at maximum!\n",
     "\n",
     "Load the iris dataset using the provided function `load()` in the stub solution. The four columns of the returned array correspond to\n",
     "\n",
