--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -766,7 +766,7 @@
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 12 (row and column vectors)</div>\n",
     "\n",
-    "Create function `get_row_vectors` that returns a list of rows from the input array of shape `(n,m)`, but this time the rows must have shape `(1,n)`. Similarly, create function `get_columns_vectors` that returns a list of columns (each having shape `(m,1)`) of the input matrix .\n",
+    "Create function `get_row_vectors` that returns a list of rows from the input array of shape `(n,m)`, but this time the rows must have shape `(1,m)`. Similarly, create function `get_columns_vectors` that returns a list of columns (each having shape `(n,1)`) of the input matrix .\n",
     "\n",
     "Example: for a 2x3 input matrix\n",
     "\n",
